--- a/qr_code_scanner.html
+++ b/qr_code_scanner.html
@@ -3,6 +3,10 @@
   <head>
     <title>Scan Your GreenCheck ID</title>
     <script type="text/javascript" src="instascan.min.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"></script>
   </head>
   <style>
     .background{
@@ -11,18 +15,45 @@
       left: 0;
       z-index: -100;
     }
-    #scandiv {
-      width: 420px;
-      position: absolute;
-      top: 155px;
-      left: 415px;
+    #scan_div {
+      padding: 10px;
+      border-style: solid;
+      border-color: #c5c5c5;
+      border-width: 2px;
+      width: 450px;
+      height: 285px;
+      margin: auto;
     }
     .fill_container {
       width: 100%;
       height: 100%;
     }
+    .sexy_header_text {
+      font: 25px arial, sans-serif;
+      color: #868686;
+      text-align: center;
+      padding: 20px;
+    }
+    .sexy_sub_text {
+      font: 15px arial, sans-serif;
+      color: #868686;
+      text-align: center;
+      padding: 15px;
+    }
     #successful_scan {
       display: none;
+    }
+    #absolute_logo {
+      width: 110px;
+      height: 60px;
+    }
+    #hover_container {
+      background-color: white;
+      width: 800px;
+      height: 440px;
+      margin: auto;
+      border-radius: 7px;
+      box-shadow: 2px 2px 10px #00000029;
     }
   </style>
   <body>
@@ -31,9 +62,21 @@
       height="640"
       class="background">
     </img>
-    <div id="scandiv">
-      <img id="successful_scan" class="fill_container"/>
-      <video id="preview" class="fill_container"></video>
+
+    <img id=absolute_logo src="/green_checkin/img/small_logo_grey_bg.png">
+    </img>
+
+    <div id="hover_container">
+      <div class="sexy_header_text">
+        Scan Your GreenCheck ID Here
+      </div>
+      <div id="scan_div">
+        <img id="successful_scan" class="fill_container"/>
+        <video id="preview" class="fill_container"></video>
+      </div>
+      <div class="sexy_sub_text">
+        Use your smartphone to show your GreenCheck ID to the camera
+      </div>
     </div>
 
     <script type="text/javascript">
@@ -42,6 +85,7 @@
         video: document.getElementById('preview')
       });
       scanner.addListener('scan', function (content, image) {
+        //Capture the QR image and display it in the parent div
         console.log(content);
         scanner.stop();
         
@@ -51,6 +95,24 @@
 
         let preview = document.getElementById("preview");
         preview.style.display = "none";
+
+        //off to the next page!
+        if(content && content.length === 36) {
+          $.ajax('user_api.php?action=checkin&id='+content, {
+            method: 'GET',
+            contentType: 'application/json',
+            processData: false
+          })
+          .then(
+              function success(userInfo) {
+                let params = $.param(JSON.parse(userInfo));
+                window.location.replace('successful_scan.html?' + params);
+              },
+              function failure(error) {
+                  alert("Checkin failed for some reason! Are you sure you used a valid QR code?");
+              }
+          );
+        }
       });
       Instascan.Camera.getCameras().then(function (cameras) {
         if (cameras.length > 0) {
