Added green background image

--- a/qr_code_scanner.html
+++ b/qr_code_scanner.html
@@ -6,7 +6,7 @@
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-      crossorigin="anonymous"></script>
+      crossoigin="anonymous"></script>
   </head>
   <style>
     .background{
@@ -14,6 +14,8 @@
       top: 0;
       left: 0;
       z-index: -100;
+      width: 100%;
+      height: 100%;
     }
     #scan_div {
       padding: 10px;
@@ -57,10 +59,7 @@
     }
   </style>
   <body>
-    <img src="/green_checkin/img/scan_id_mockup.png"
-      width="1250"
-      height="640"
-      class="background">
+    <img src="/green_checkin/img/green-background.jpg" class="background">
     </img>
 
     <img id=absolute_logo src="/green_checkin/img/small_logo_grey_bg.png">
