--- a/qr_code_scanner.html
+++ b/qr_code_scanner.html
@@ -6,58 +6,11 @@
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-      crossoigin="anonymous"></script>
+      crossorigin="anonymous"></script>
+
+      <link rel="stylesheet" type="text/css" href="css/checkin.css">
   </head>
-  <style>
-    .background{
-      position: absolute;
-      top: 0;
-      left: 0;
-      z-index: -100;
-      width: 100%;
-      height: 100%;
-    }
-    #scan_div {
-      padding: 10px;
-      border-style: solid;
-      border-color: #c5c5c5;
-      border-width: 2px;
-      width: 450px;
-      height: 285px;
-      margin: auto;
-    }
-    .fill_container {
-      width: 100%;
-      height: 100%;
-    }
-    .sexy_header_text {
-      font: 25px arial, sans-serif;
-      color: #868686;
-      text-align: center;
-      padding: 20px;
-    }
-    .sexy_sub_text {
-      font: 15px arial, sans-serif;
-      color: #868686;
-      text-align: center;
-      padding: 15px;
-    }
-    #successful_scan {
-      display: none;
-    }
-    #absolute_logo {
-      width: 110px;
-      height: 60px;
-    }
-    #hover_container {
-      background-color: white;
-      width: 800px;
-      height: 440px;
-      margin: auto;
-      border-radius: 7px;
-      box-shadow: 2px 2px 10px #00000029;
-    }
-  </style>
+
   <body>
     <img src="/green_checkin/img/green-background.jpg" class="background">
     </img>
@@ -105,7 +58,7 @@
           .then(
               function success(userInfo) {
                 let params = $.param(JSON.parse(userInfo));
-                window.location.replace('successful_scan.html?' + params);
+                //window.location.replace('successful_scan.html?' + params);
               },
               function failure(error) {
                   alert("Checkin failed for some reason! Are you sure you used a valid QR code?");
