Added a sexy grey box-shadowed border to the next button and viewing port

--- a/successful_scan.html
+++ b/successful_scan.html
@@ -19,13 +19,13 @@
       <div class="sexy_header_text">
         Your GreenCheck ID has been accepted
       </div>
-      <div id=center_content_holder class = "next_button_offset">
-        <div id="viewing_port_div">
+      <div id=center_content_holder class="next_button_offset">
+        <div id="viewing_port_div" class="grey_border">
           <img src="/green_checkin/img/green_circle_check.png" class="green_circle">
           <div id="thanks_name" class="sexy_header_text"></div>
         </div>
         <div class="next_button_container">
-          <div class="next_button">
+          <div class="next_button grey_border">
             <img src="/green_checkin/img/next_arrow.png" class="next_arrow"/>
           </div>
         </div>
