fixed up the formatting bugs that were caused from messing with css in the successful checkin page

--- a/qr_code_scanner.html
+++ b/qr_code_scanner.html
@@ -19,9 +19,12 @@
       <div class="sexy_header_text">
         Scan Your GreenCheck ID Here
       </div>
-      <div id="viewing_port_div">
-        <img id="successful_scan" class="fill_container"/>
-        <video id="preview" class="fill_container"></video>
+
+      <div id=center_content_holder class="next_button_offset">
+        <div id="viewing_port_div" class="grey_border">
+          <img id="successful_scan" class="fill_container"/>
+          <video id="preview" class="fill_container"></video>
+        </div>
       </div>
       <div class="sexy_sub_text">
         Use your smartphone to show your GreenCheck ID to the camera
