--- a/qr_code_scanner.html
+++ b/qr_code_scanner.html
@@ -26,7 +26,7 @@
           <video id="preview" class="fill_container"></video>
         </div>
       </div>
-      <div class="sexy_sub_text">
+      <div class="little_sub_text pad_15">
         Use your smartphone to show your GreenCheck ID to the camera
       </div>
     </div>
